@@ -3,7 +3,8 @@ LICENSE
 Manifest
 README.md
 Rakefile
-bin/boxgrinder
+bin/boxgrinder-build
+boxgrinder-build.gemspec
 lib/boxgrinder-build.rb
 lib/boxgrinder-build/appliance.rb
 lib/boxgrinder-build/helpers/appliance-customize-helper.rb
@@ -13,7 +14,6 @@ lib/boxgrinder-build/helpers/image-helper.rb
 lib/boxgrinder-build/helpers/linux-helper.rb
 lib/boxgrinder-build/helpers/package-helper.rb
 lib/boxgrinder-build/helpers/plugin-helper.rb
-lib/boxgrinder-build/helpers/thor-helper.rb
 lib/boxgrinder-build/managers/plugin-manager.rb
 lib/boxgrinder-build/plugins/base-plugin.rb
 lib/boxgrinder-build/plugins/delivery/ebs/ebs-plugin.rb
