@@ -2,6 +2,7 @@ v0.8.2
 
 * [BGBUILD-174] Move plugins to boxgrinder-build gem
 * [BGBUILD-169] README to indicate supported operating systems / requirements
+* [BGBUILD-175] Rewrite boxgrinder CLI to remove thor dependency
 
 v0.8.1
 
